--- a/hospital/templates/patient_navbar.html
+++ b/hospital/templates/patient_navbar.html
@@ -1,9 +1,24 @@
-<div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-        <li> <a href="{% url 'home' %}">Home</a></li>
-        <li> <a href="#">Profile</a></li>
-        <li> <a href="#">Make Appointments</a></li>
-        <li> <a href="#">View Appointments</a></li>
-        <li> <a href="#">Logout</a></li>
-    </ul>
-</div>
+<nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Bootstrap Sidebar</h3>
+        </div>
+
+        <ul class="list-unstyled components">
+            <p>Dummy Heading</p>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Profile</a>
+            </li>
+            <li>
+                <a href="#">Make Appointments</a>
+            </li>
+            <li>
+                <a href="#">View Appointments</a>
+            </li>
+            <li>
+                <a href="#">Logout</a>
+            </li>
+        </ul>
+</nav>
