--- a/hospital/templates/navbar.html
+++ b/hospital/templates/navbar.html
@@ -81,40 +81,40 @@
               <div class="classynav">
                 <ul id="nav">
                   <li><a href="{% url 'home' %}">Home</a></li>
-                  <li><a href="#">Pages</a>
-                    <ul class="dropdown">
-                      <li><a href="{% url 'home' %}">-Home</a></li>
-                      <li><a href="{% url 'about' %}">- About Us</a></li>
-                      <li><a href="{% url 'service' %}">- Service</a></li>
-                      <li><a href="{% url 'pricing' %}">- Pricing</a></li>
-                      <li><a href="{% url 'blog' %}">- Blog</a></li>
-                      <li><a href="blog-details.html">- Blog Details</a></li>
-                      <li><a href="{% url 'contact' %}">- Contact</a></li>
-                      <li><a href="#">- Dropdown</a>
-                        <ul class="dropdown">
-                          <li><a href="#">- Dropdown Item</a></li>
-                          <li><a href="#">- Dropdown Item</a>
-                            <ul class="dropdown">
-                              <li><a href="#">- Even Dropdown</a></li>
-                              <li><a href="#">- Even Dropdown</a></li>
-                              <li><a href="#">- Even Dropdown</a></li>
-                              <li><a href="#">- Even Dropdown</a></li>
-                            </ul>
-                          </li>
-                          <li><a href="#">- Dropdown Item</a></li>
-                          <li><a href="#">- Dropdown Item</a></li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
+{#                  <li><a href="#">Pages</a>#}
+{#                    <ul class="dropdown">#}
+{#                      <li><a href="{% url 'home' %}">-Home</a></li>#}
+{#                      <li><a href="{% url 'about' %}">- About Us</a></li>#}
+{#                      <li><a href="{% url 'service' %}">- Service</a></li>#}
+{#                      <li><a href="{% url 'pricing' %}">- Pricing</a></li>#}
+{#                      <li><a href="{% url 'blog' %}">- Blog</a></li>#}
+{#                      <li><a href="blog-details.html">- Blog Details</a></li>#}
+{#                      <li><a href="{% url 'contact' %}">- Contact</a></li>#}
+{#                      <li><a href="#">- Dropdown</a>#}
+{#                        <ul class="dropdown">#}
+{#                          <li><a href="#">- Dropdown Item</a></li>#}
+{#                          <li><a href="#">- Dropdown Item</a>#}
+{#                            <ul class="dropdown">#}
+{#                              <li><a href="#">- Even Dropdown</a></li>#}
+{#                              <li><a href="#">- Even Dropdown</a></li>#}
+{#                              <li><a href="#">- Even Dropdown</a></li>#}
+{#                              <li><a href="#">- Even Dropdown</a></li>#}
+{#                            </ul>#}
+{#                          </li>#}
+{#                          <li><a href="#">- Dropdown Item</a></li>#}
+{#                          <li><a href="#">- Dropdown Item</a></li>#}
+{#                        </ul>#}
+{#                      </li>#}
+{#                    </ul>#}
+{#                  </li>#}
                   <li><a href="{% url 'about' %}">About</a></li>
                   <li><a href="{% url 'service' %}">Service</a></li>
-                  <li><a href="{% url 'pricing' %}">Pricing</a></li>
-                  <li><a href="#">Blog</a>
-                    <ul class="dropdown">
-                      <li><a href="{% url 'blog' %}">- Blog</a></li>
-                      <li><a href="blog-details.html">- Blog Details</a></li>
-                    </ul>
+{#                  <li><a href="{% url 'pricing' %}">Pricing</a></li>#}
+{#                  <li><a href="#">Blog</a>#}
+{#                    <ul class="dropdown">#}
+{#                      <li><a href="{% url 'blog' %}">- Blog</a></li>#}
+{#                      <li><a href="blog-details.html">- Blog Details</a></li>#}
+{#                    </ul>#}
                   </li>
                   <li><a href="{% url 'contact' %}">Contact</a></li>
                 </ul>
@@ -123,8 +123,8 @@
             </div>
 
             <!-- Booking Now Button -->
-            <a href="{% url 'loginuser' %}" class="btn dento-btn booking-btn">Login</a>
-            <a href="{% url 'signup' %}" class="btn dento-btn booking-btn">Signup</a>
+{#            <a href="{% url 'loginuser' %}" class="btn dento-btn booking-btn">Login</a>#}
+{#            <a href="{% url 'signup' %}" class="btn dento-btn booking-btn">Signup</a>#}
           </nav>
         </div>
       </div>
