--- a/hospital/templates/service.html
+++ b/hospital/templates/service.html
@@ -126,7 +126,8 @@
             <div class="single-testimonial-slide d-flex align-items-center">
               <!-- Thumbnail -->
               <div class="testimonial-thumb">
-                <img src="./img/bg-img/8.jpg" alt="">
+                  ({% static 'hospital/img/bg-img/12.jpg' %})
+                <img src="{% static 'hospital/img/bg-img/8.jpg' %}" alt="">
               </div>
               <!-- Content -->
               <div class="testimonial-content">
