--- a/hospital/templates/registration/login.html
+++ b/hospital/templates/registration/login.html
@@ -33,7 +33,7 @@
                 {% endfor %}
                 <div class="mt-4">
                     <div class="d-flex justify-content-center links">
-{#                       # <a href="{% url 'password_reset' %}" class="ml-2">Forgot your password?</a>#}
+                  <a href="{% url 'password_reset' %}" class="ml-2">Forgot your password?</a>
                     </div>
                 </div>
             </div>
