Update Appointment record and restricting views

--- a/hospital/templates/employee_homepage.html
+++ b/hospital/templates/employee_homepage.html
@@ -10,7 +10,7 @@
 <div class="wrapper">
 
     <!-- Sidebar -->
-    {% include 'employee_sidebar.html' %}
+    {% include 'patient_sidebar.html' %}
 
     <!-- Page Content -->
 
