--- a/hospital/templates/employee_sidebar.html
+++ b/hospital/templates/employee_sidebar.html
@@ -13,7 +13,7 @@
                 <a href="{% url 'password_change' %}">Change Password</a>
             </li>
             <li>
-                <a href={% url 'MakeAppointments' %}>Add Appointments</a>
+                <a href={% url 'AddAppointment' %}>Add Appointments</a>
             </li>
             <li>
                 <a href={% url 'EmpListView' %}>View Appointments</a>
