--- a/hospital/templates/patient_sidebar.html
+++ b/hospital/templates/patient_sidebar.html
@@ -1,6 +1,6 @@
 <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Patient List</h3>
+            <h3> List</h3>
         </div>
 
         <ul class="list-unstyled components">
@@ -13,12 +13,25 @@
             <li>
                 <a href="{% url 'password_change' %}">Change Password</a>
             </li>
+ {% if not user.is_staff %}
             <li>
                 <a href={% url 'MakeAppointments' %}>Make Appointments</a>
             </li>
+ {% else %}
+            <li>
+                <a href={% url 'AddAppointment' %}>Add Appointments</a>
+            </li>
+  {% endif %}
+
+  {% if not user.is_staff %}
             <li>
                 <a href="{% url 'AppointmentListView' %}">View Appointments</a>
             </li>
+  {% else %}
+            <li>
+                <a href={% url 'EmpListView' %}>View Appointments</a>
+            </li>
+  {% endif %}
             <li>
                 <a href="{% url 'logoutuser' %}">Logout</a>
             </li>
