--- a/hospital/templates/emppatientviewappointments.html
+++ b/hospital/templates/emppatientviewappointments.html
@@ -25,8 +25,8 @@
             <center>
             <h1> View appointment </h1>
             <br><br/>
-           <ul class = "collapsible popout text-center" data-collapsible = "accordion">
-               {% for Appointment in object_list %}
+                <ul class = "collapsible popout text-center" data-collapsible = "accordion"}
+                {% for Appointment in object_list %}
                         <li class="card">
                             <div class = "card-header collapsible-header">
                                 <h5 style="color:blue;"><a><i class="fa fa-calendar-check-o"></i>  {{ Appointment.patientname }} appointment with {{ Appointment.doctorname }} on {{Appointment.appointmentdate}}</a></h5>
